Set Python 3 requirement

--- a/required_info.json.sample
+++ b/required_info.json.sample
@@ -1,6 +1,6 @@
 {
-  "linkedin_email": "khukan@gmail.com",
-  "linkedin_password": "mupmem-pakpyq-Gybma6",
+  "linkedin_email": "XXXXXXXX",
+  "linkedin_password": "XXXXXXXX",
   "courses_links": [
     "code-clinic-php"
   ]
